[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/bullet/Bullet1 (1).png" type="Texture" id=1]
[ext_resource path="res://assets/bullet/Bullet1 (4).png" type="Texture" id=2]
[ext_resource path="res://assets/bullet/Bullet1 (2).png" type="Texture" id=3]
[ext_resource path="res://assets/bullet/Bullet1 (3).png" type="Texture" id=4]
[ext_resource path="res://Karakter/Enemy/Peluru.gd" type="Script" id=5]
[ext_resource path="res://Audio/laser enemy.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "Destroy",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.95342
height = 0.0

[node name="Peluru" type="RigidBody2D"]
collision_layer = 0
collision_mask = 19
mass = 9.18367
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 5 )

[node name="SpriteBullet" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Destroy"
frame = 3
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7, 0 )
rotation = -1.53065
shape = SubResource( 2 )

[node name="bullet" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_Peluru_body_entered"]
[connection signal="animation_finished" from="SpriteBullet" to="." method="_on_SpriteBullet_animation_finished"]
